[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/pixelfj8pt1.normal.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Entities/Interface/StartingScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]

font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]

default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]

size = 42
extra_spacing_top = 8
extra_spacing_bottom = 8
extra_spacing_char = 4
extra_spacing_space = 4
font_data = ExtResource( 1 )

[node name="StartingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="MainMenu" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TopSeparator" type="ColorRect" parent="MainMenu"]
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
color = Color( 1, 1, 1, 0 )

[node name="Title" type="Label" parent="MainMenu"]
margin_left = 287.0
margin_top = 54.0
margin_right = 736.0
margin_bottom = 118.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 3 )
text = "Tower Defense"

[node name="MiddleSeparator" type="ColorRect" parent="MainMenu"]
margin_top = 122.0
margin_right = 1024.0
margin_bottom = 272.0
rect_min_size = Vector2( 0, 150 )
color = Color( 1, 1, 1, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
margin_left = 437.0
margin_top = 276.0
margin_right = 587.0
margin_bottom = 328.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 6

[node name="StartButton" type="Button" parent="MainMenu/VBoxContainer"]
margin_right = 150.0
margin_bottom = 24.0
size_flags_horizontal = 7
text = "Start"

[node name="ExitButton" type="Button" parent="MainMenu/VBoxContainer"]
margin_top = 28.0
margin_right = 150.0
margin_bottom = 52.0
size_flags_horizontal = 7
text = "Exit"

[node name="Levels" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ItemList" type="ItemList" parent="Levels"]
margin_right = 1024.0
margin_bottom = 507.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
custom_constants/vseparation = 15
custom_constants/hseparation = 15
max_columns = 11
same_column_width = true
icon_mode = 0

[node name="Panel" type="Panel" parent="Levels"]
margin_top = 511.0
margin_right = 1024.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Levels/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Level" type="Label" parent="Levels/Panel/HBoxContainer"]
margin_top = 22.0
margin_bottom = 61.0
text = "
"

[node name="Start" type="Button" parent="Levels/Panel/HBoxContainer"]
margin_left = 894.0
margin_right = 958.0
margin_bottom = 84.0
size_flags_horizontal = 10
text = "Start"

[node name="BackToMain" type="Button" parent="Levels/Panel/HBoxContainer"]
margin_left = 962.0
margin_right = 1024.0
margin_bottom = 84.0
size_flags_horizontal = 8
text = "Back"

[node name="Panel2" type="Panel" parent="Levels"]
margin_top = 599.0
margin_right = 1024.0
margin_bottom = 599.0

[connection signal="pressed" from="MainMenu/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="item_selected" from="Levels/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="Levels/Panel/HBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Levels/Panel/HBoxContainer/BackToMain" to="." method="_on_BackToMain_pressed"]
